--- a/v2-library/_src/scss/ui-components/_ui-table.scss
+++ b/v2-library/_src/scss/ui-components/_ui-table.scss
@@ -42,6 +42,13 @@ table.tutor-ui-table {
 		border: none;
 	}
 
+	th,
+	td {
+		* {
+			word-break: break-word;
+		}
+	}
+
 	// Table utility classes
 	.inline-flex-center {
 		display: inline-flex;
